--- a/runtime/ipu/Dockerfile/Dockerfile.server
+++ b/runtime/ipu/Dockerfile/Dockerfile.server
@@ -11,6 +11,7 @@ RUN apt-get update && \
     python3-pip \
     python3-distutils \
     make \
+    wget \
     g++ \
     gcc \
     cmake \
@@ -22,7 +23,10 @@ RUN apt-get update && \
     librdmacm-dev \
     libarchive-dev
 
-RUN pip3 install cmake numpy
+RUN pip3 install \
+                cmake \
+                numpy \
+                https://download.pytorch.org/whl/cpu/torchaudio-0.10.0%2Bcpu-cp38-cp38-linux_x86_64.whl
 
 #Build triton backend
 ENV TAG r21.05
@@ -55,3 +59,19 @@ RUN git clone https://github.com/triton-inference-server/python_backend.git && \
 RUN cp -r /opt/triton/lib /server/mybuild/tritonserver/backends/poplar
 
 
+RUN pip3 install Pillow \
+                pyyaml>=5.1 \
+                sentencepiece \
+                tensorboard \
+                tensorboardX \
+                typeguard \
+                textgrid \
+                pytest \
+                flake8==3.8.2 \
+                flake8-bugbear \
+                flake8-comprehensions \
+                flake8-executable \
+                flake8-pyi==20.5.0 \
+                mccabe \
+                pycodestyle==2.6.0 \
+                pyflakes==2.2.0
